# vector2dggs

./: .gitignore  CITATION.cff  README.md  RELEASE.md  conda_dev.yml  meta.yaml  pyproject.toml
.github/workflows/: main.yml  publish.yml
old/: 1PolytoParquet_cookie.py  1_test_mp_PolytoParquet_cookie.py  2PolyfillfromParquet.py  Combined.py  clicktrial.py  vector2dggs_katana.py
tests/: test_runthrough.py  test_vector2dggs.py
tests/classes/: a5.py  base.py  compaction.py  errors.py  geohash.py  geometry_types.py  h3.py  katana.py  output_validation.py  rHP.py  s2.py
tests/data/: README.md  chathams-pannz-2014.gpkg  datapaths.py  se-island-contours.gpkg  se-island-exterior.gpkg  se-island-height-pts.gpkg  se-island.gpkg
vector2dggs/: __init__.py  a5.py  cli.py  cli_factory.py  common.py  constants.py  geohash.py  h3.py  indexerfactory.py  interfaces.py  katana.py  rHP.py  s2.py  vector2dggs.py
vector2dggs/indexers/: a5vectorindexer.py  geohashvectorindexer.py  h3vectorindexer.py  rhpvectorindexer.py  s2vectorindexer.py  vectorindexer.py
vector2dggs/indexers/geohash/: __init__.py  traversal.py
