[tool.poetry]
name = "vector2dggs"
version = "0.10.0"
description = "CLI DGGS indexer for vector geospatial data"
authors = ["James Ardo <ardoj@landcareresearch.co.nz>"]
maintainers = ["Richard Law <lawr@landcareresearch.co.nz>"]
readme = "README.md"
license = "LGPL-3.0-or-later"
repository = "https://github.com/manaakiwhenua/vector2dggs"
keywords = ["dggs", "vector", "h3", "rHEALPix", "cli"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[tool.poetry.dependencies]
python = "^3.11"
gdal = "^3.8"
geopandas = "^1.0.1"
h3pandas = "^0.3"
dask-geopandas = "^0.5"
dask = "^2025.1"
click = "^8.1.7"
tqdm = "^4.67"
click-log = "^0.4.0"
pyarrow = "^20.0"
pyproj = "^3.7"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
shapely = "^2.1"
numpy = "^2"
rhppandas = "^0.2.0"
pillow = "^11.2.1"
s2geometry = "^0.9.0"
rusty-polygon-geohasher = "^0.2.3"
python-geohash = "^0.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
twine ="*"
black = "*"

[tool.poetry.scripts]
vector2dggs = "vector2dggs.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88