[tool.poetry]
name = "vector2dggs"
version = "0.13.1"
description = "CLI DGGS indexer for vector geospatial data"
authors = ["James Ardo <ardoj@landcareresearch.co.nz>"]
maintainers = ["Richard Law <lawr@landcareresearch.co.nz>"]
readme = "README.md"
license = "LGPL-3.0-or-later"
repository = "https://github.com/manaakiwhenua/vector2dggs"
keywords = ["dggs", "vector", "h3", "rHEALPix", "cli"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[tool.poetry.dependencies]
python = "^3.11"
gdal = ">3.8,<3.11.4"
geopandas = "^1.1.2"
dask-geopandas = "^0.5"
dask = "^2025.1"
click = "^8.1.7"
tqdm = "^4.67"
click-log = "^0.4.0"
pyarrow = "^20.0"
pyproj = "^3.7"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
shapely = "^2.1"
numpy = "^2"
pillow = "^12"
h3pandas = { version = "^0.3", optional = true }
rhppandas = { version = "^0.2.0", optional = true}
rhealpixdggs = { version = "^0.5.12", optional = true}
s2geometry = { version = "^0.9.0", optional = true}
rusty-polygon-geohasher = { version = "^0.2.3", optional = true}
python-geohash = { version = "^0.8.5", optional = true}
urllib3 = "^2.6.3"
cryptography = "^46.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
twine ="*"
black = "^26.3.1"

[tool.poetry.scripts]
vector2dggs = "vector2dggs.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.poetry.extras]
h3 = ["h3pandas"]
rhp = ["rhppandas", "rhealpixdggs"]
s2 = ["s2geometry"]
geohash = ["rusty-polygon-geohasher", "python-geohash"]
# Convenience extras
all = ["h3pandas", "rhppandas", "rhealpixdggs", "s2geometry", "rusty-polygon-geohasher", "python-geohash"]